test(repository): 优化并完善CustomerTicket相关测试用例
- 在CustomerTicketMapperTests中改用customerTicketMapper.save替代entityManager.persist
- 使用@EntityScan注解指定实体扫描路径，确保测试环境配置完善
- 在CustomerTicketRepositoryTests中移除多余注解，避免重复导入SpringExtension
- 增加注释说明Mockito模拟行为，提升测试代码可读性
- 在测试资源配置application.yml中添加注释，指导@DataJpaTest配置覆盖问题
- 调整测试配置中的数据库连接信息和密码，确保测试环境一致
- 对测试方法内的模拟数据和断言逻辑做细微调整，增强测试健壮性

--- a/ticket-service/src/main/resources/application.yml
+++ b/ticket-service/src/main/resources/application.yml
@@ -1,10 +1,11 @@
+# 一般放项目运行时的配置
 server:
   port: 8081
 
 order:
   service:
     url: http://localhost:8083/orders/profile/{orderNumber}
-    
+
 staff:
   service:
     url: http://localhost:8082/staffs/profile/
@@ -19,7 +20,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
-      
+
   cloud:
     stream:
       bindings:
@@ -28,7 +29,7 @@ spring:
           binder: rabbitmq
         ticketApplicationOutput:
           destination: ticketApplication
-          contentType: application/json  
+          contentType: application/json
       binders:
         rabbitmq:
           type: rabbit
